     the result.lastrowid accessor.   Test coverage has
     been added for result.lastrowid.   Note that lastrowid
     is only supported by Pysqlite and some MySQL drivers,
     so isn't super-useful in the general case.
   
   - the logging message emitted by the engine when
     a connection is first used is now "BEGIN (implicit)" 
     to emphasize that DBAPI has no explicit begin().
     
0.6.4
=====
- orm
  - The name ConcurrentModificationError has been
    changed to StaleDataError, and descriptive 
    error messages have been revised to reflect
    exactly what the issue is.   Both names will
    remain available for the forseeable future
    for schemes that may be specifying 
    ConcurrentModificationError in an "except:"
    clause.

  - Added a mutex to the identity map which mutexes
    remove operations against iteration methods,
    which now pre-buffer before returning an 
    iterable.   This because asyncrhonous gc 
    can remove items via the gc thread at any time.
    [ticket:1891]
    
  - The Session class is now present in sqlalchemy.orm.*.
    We're moving away from the usage of create_session(),
    which has non-standard defaults, for those situations
    where a one-step Session constructor is desired. Most
    users should stick with sessionmaker() for general use,
    however.
  
  - query.with_parent() now accepts transient objects
    and will use the non-persistent values of their pk/fk
    attributes in order to formulate the criterion.  
    Docs are also clarified as to the purpose of with_parent().
    
  - The include_properties and exclude_properties arguments
    to mapper() now accept Column objects as members in 
    addition to strings.  This so that same-named Column
    objects, such as those within a join(), can be
    disambiguated.

  - A warning is now emitted if a mapper is created against a
    join or other single selectable that includes multiple
    columns with the same name in its .c. collection,