@@ -8,6 +8,7 @@
 
 from sqlalchemy.exc import CircularDependencyError
 from sqlalchemy import util
+import itertools
 
 __all__ = ['sort', 'sort_as_subsets', 'find_cycles']
 
@@ -27,8 +28,10 @@ def sort_as_subsets(tuples, allitems):
 
         if not output:
             raise CircularDependencyError(
-                    "Circular dependency detected: cycles: %r all edges: %s" % 
-                    (find_cycles(tuples, allitems), _dump_edges(edges, True)))
+                    "Circular dependency detected",
+                    find_cycles(tuples, allitems), 
+                    _gen_edges(edges)
+                )
 
         todo.difference_update(output)
         yield output
@@ -72,14 +75,11 @@ def find_cycles(tuples, allitems):
                 node = stack.pop()
     return output
 
-def _dump_edges(edges, reverse):
-    l = []
-    for left in edges:
-        for right in edges[left]:
-            if reverse:
-                l.append((right, left))
-            else:
-                l.append((left, right))
-    return repr(l)
-
-
+def _gen_edges(edges):
+    return set(itertools.chain(
+                *[
+                    [
+                        (right, left) for right in edges[left]
+                    ] for left in edges
+                ]
+            ))
